--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,5 +16,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.29"
         app:srcCompat="@android:drawable/ic_menu_camera" />
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageButton"
+        app:layout_constraintStart_toStartOf="@+id/imageButton"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton" >
+
+        <RadioButton
+            android:id="@+id/leclerc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Leclerc" />
+
+        <RadioButton
+            android:id="@+id/casino"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Casino" />
+    </RadioGroup>
 </androidx.constraintlayout.widget.ConstraintLayout>
