--- a/app/src/main/res/layout/history_list_view.xml
+++ b/app/src/main/res/layout/history_list_view.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/ticketPhoto"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -18,32 +18,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="3213211654"
         android:textAlignment="center"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/ticketPhoto"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="3213211654" />
 
     <TextView
         android:id="@+id/products"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="X PRODUCTs"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="@+id/ticketPhoto"
+        app:layout_constraintStart_toEndOf="@+id/ticketPhoto"
+        app:layout_constraintTop_toTopOf="@+id/ticketPhoto"
+        tools:text="X PRODUCTs" />
 
     <TextView
         android:id="@+id/totalTicket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:text="XX €"
+        android:layout_marginEnd="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/products"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/products" />
+        app:layout_constraintTop_toTopOf="@+id/products"
+        tools:text="XX €" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
