--- a/app/src/main/res/layout/history_list_view.xml
+++ b/app/src/main/res/layout/history_list_view.xml
@@ -27,7 +27,7 @@
         tools:text="3213211654" />
 
     <TextView
-        android:id="@+id/products"
+        android:id="@+id/productName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -41,9 +41,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/products"
+        app:layout_constraintBottom_toBottomOf="@+id/productName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/products"
+        app:layout_constraintTop_toTopOf="@+id/productName"
         tools:text="XX €" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
