--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,27 +16,41 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.29"
+        app:layout_constraintVertical_bias="0.75"
         app:srcCompat="@android:drawable/ic_menu_camera" />
 
     <RadioGroup
+        android:id="@+id/magasinGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginBottom="100dp"
+        android:checkedButton="@id/carouf"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton"
         app:layout_constraintEnd_toEndOf="@+id/imageButton"
-        app:layout_constraintStart_toStartOf="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" >
+        app:layout_constraintStart_toStartOf="@+id/imageButton">
+
+        <RadioButton
+            android:id="@+id/carouf"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/carefour" />
 
         <RadioButton
             android:id="@+id/leclerc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Leclerc" />
+            android:text="@string/leclerc" />
 
         <RadioButton
             android:id="@+id/casino"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Casino" />
+            android:text="@string/casino" />
+
+        <RadioButton
+            android:id="@+id/autre"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/autre" />
     </RadioGroup>
 </androidx.constraintlayout.widget.ConstraintLayout>
