--- a/app/src/main/res/layout/activity_edit_ticket.xml
+++ b/app/src/main/res/layout/activity_edit_ticket.xml
@@ -20,7 +20,9 @@
         android:id="@+id/idTicket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="35dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toEndOf="@+id/ticketPhoto"
