--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,9 +5,16 @@
         android:id="@+id/returnToMainActivity"
         android:icon="@android:drawable/ic_menu_camera"
         android:title="@string/new_ticket"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/historyMenu"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
         android:title="@string/history"
-        android:visible="true" />
+        android:visible="true"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/creditMenu"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:title="@string/credit"
+        app:showAsAction="collapseActionView" />
 </menu>
