--- a/app/src/main/res/layout/activity_credit.xml
+++ b/app/src/main/res/layout/activity_credit.xml
@@ -79,6 +79,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="30dp"
         android:contentDescription="@string/iut_logo"
+        android:onClick="onClickImage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
