--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,13 +2,13 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/returnToMainActivity"
-        android:icon="@android:drawable/ic_menu_camera"
+        android:id="@+id/photoMenu"
+        android:icon="@drawable/ic_add_a_photo_black_24dp"
         android:title="@string/new_ticket"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/historyMenu"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
+        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
         android:title="@string/history"
         android:visible="true"
         app:showAsAction="always" />
